# 60-days-of-solana

./: README.md
day_01/: README.md
day_01/tests/: day_1.ts
day_02/: Anchor.toml  README.md
day_03/: Anchor.toml  README.md
day_03/tests/: day_3.ts
day_04/: README.md
day_05/: Anchor.toml  README.md
day_06/: Anchor.toml  README.md
day_06/tests/: day_6.ts
day_07/: README.md
day_08/: README.md
day_09/: README.md
day_1/: Anchor.toml  README.md
day_10/: Anchor.toml  README.md
day_11/: Anchor.toml  README.md
day_11/programs/day_11/: Cargo.toml
day_11/programs/day_11/src/: lib.rs
day_12/: Anchor.toml  README.md
day_13/: Anchor.toml  README.md
day_14/: Anchor.toml  README.md
day_15/: Anchor.toml  README.md
day_16/: Anchor.toml  README.md
day_17/: Anchor.toml  README.md
day_18/: README.md
day_19/: Anchor.toml  README.md
day_2/: README.md
day_20/: Anchor.toml  README.md
day_21/: Anchor.toml  README.md
day_22/: README.md
day_23/: Anchor.toml  README.md
day_24/: Anchor.toml  README.md
day_25/: Anchor.toml  README.md  package.json
day_26/: Anchor.toml  README.md
day_27/: Anchor.toml  README.md  package-lock.json
day_27/programs/day_27/: Cargo.toml
day_27/programs/day_27/src/: lib.rs
day_28/: Anchor.toml  README.md  package-lock.json
day_29/: Anchor.toml  README.md  package-lock.json  package.json  tempfile
day_3/: README.md
day_30/: Anchor.toml  README.md
day_4/: Anchor.toml  README.md
day_6/: README.md
day_7/: Anchor.toml  README.md
day_8/: Anchor.toml  README.md
day_9/: README.md
(+94 files in other folders)
